--- a/package.json
+++ b/package.json
@@ -21,23 +21,23 @@
       "react-toastify": "^10.0.5"
    },
    "devDependencies": {
+      "@testing-library/jest-dom": "^6.5.0",
+      "@testing-library/react": "^14.2.0",
       "@types/react": "^18.3.3",
       "@types/react-dom": "^18.3.0",
-      "@vitejs/plugin-react": "^4.3.1",
+      "@vitejs/plugin-react": "^4.3.3",
+      "@vitest/ui": "^2.1.1",
       "autoprefixer": "^10.4.19",
       "clsx": "^2.1.1",
       "eslint": "^8.57.0",
       "eslint-plugin-react": "^7.37.2",
       "eslint-plugin-react-hooks": "^4.6.2",
       "eslint-plugin-react-refresh": "^0.4.7",
+      "jsdom": "^25.0.1",
       "json-server": "^1.0.0-beta.1",
       "postcss": "^8.4.40",
       "tailwindcss": "^3.4.7",
       "vite": "^5.3.4",
-      "@testing-library/jest-dom": "^6.5.0",
-      "@testing-library/react": "^14.2.0",
-      "@vitest/ui": "^2.1.1",
-      "vitest": "^2.1.1",
-      "jsdom": "^25.0.1"
+      "vitest": "^2.1.1"
    }
 }
